<resources>
    <string name="app_name">我要做计划</string>
    <string name="menu_write">Add</string>
    <string name="menu_cancel">Cancel</string>
    <string name="error">Error!</string>
    <string name="developing">Features no open</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_title_hint">Diary Title</string>
    <string name="add_title_description">Diary Description</string>
    <string name="btn_ok">Commit</string>
    <string name="add_success">Update successful</string>
    <string name="add_failed">Update failed</string>
    <string name="dialog_delete">is it delete</string>
    <string name="input_password_text">Please Input Password</string>
    <string name="input_password_hint">Please input your password</string>
    <string name="set_password_text">Set Password</string>
    <string name="btn_enter_text">Enter</string>
    <string name="input_password_again_hint">Please input your password again</string>
    <string name="take_photo_text">Take photo</string>
    <string name="open_album_text">Open album</string>
    <string name="cancel_text">Cancel</string>
    <string name="user_name_hint">Sheep Sir</string>
    <string name="my_password_text">My Password</string>
    <string name="password_hide_text">***********</string>
    <string name="setting_text">Setting</string>
    <string name="help_text">Help</string>
    <string name="help_phone_hint">Phone: 400 600 000</string>
    <string name="update_today_sights_text">Update Today Sights</string>
    <string name="experience_now_text">GO To Now</string>
    <string name="password_is_not_empty_toast">Password is not empty!</string>
    <string name="input_password_again_toast">Please input password again!</string>
    <string name="password_twice_not_same_toast">The password is inconsistent twice!</string>
    <string name="login_success_toast">Login Successfully!</string>
    <string name="password_is_not_correct_toast">Password is not correct!</string>
    <string name="take_photo_toast">Take Photo Ready!</string>
    <string name="pick_photo_toast">Pick Photo Ready!</string>
    <string name="tree_hole_text">Be your own tree hole</string>
    <string name="keep_life_text">Keep a record of your life in a timely manner</string>
    <string name="listen_you_text">Listen to you</string>
    <string name="menu_diary_text">Diary</string>
    <string name="menu_record_text">Record</string>
    <string name="menu_mine_text">Mine</string>
    <string name="enter">进入</string>
    <string name="setpassword">设置密码</string>
    <string name="inputPassword">输入密码</string>
    <string name="inputPasswordAgain">再次输入密码</string>
    <string name="inputPasswordPlease">请输入密码</string>
    <string name="keepPlans">我要做计划</string>
    <string name="goNow">现在开始</string>
    <string name="PlanTitle">计划名称</string>
    <string name="PlanDes">计划描述</string>
    <string name="comm">提交</string>
    <string name="user">新用户11325</string>
</resources>