<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/layout_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:paddingBottom="50dp"
            android:orientation="horizontal"
            android:background="#00BCD4">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/boy_avator"
                app:shapeAppearanceOverlay="@style/circleImageStyle" />

            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_weight="2"
                android:text="@string/user"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="-25dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:paddingBottom="40dp"
            android:layout_below="@id/layout_avatar"
            android:background="@drawable/background_corner">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:text="@string/my_password_text"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="18dp"/>

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/password_hide_text"
                android:gravity="center"
                android:maxLines="1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:drawablePadding="10dp"
                app:drawableEndCompat="@drawable/eye_off" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_setting"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/layout_psw"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/background_corner">
            <TextView
                android:id="@+id/tv_setting"
                android:text="@string/setting_text"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="30dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_about"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/layout_setting"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            android:background="@drawable/background_corner">
            <TextView
                android:id="@+id/tv_help"
                android:text="@string/help_text"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="30dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start|center_vertical"/>
            <TextView
                android:id="@+id/tv_helpPhone"
                android:text="@string/help_phone_hint"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_about"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/background_corner"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/tv_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="30dp"
                android:gravity="start|center_vertical"
                android:text="@string/update_today_sights_text"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/dash" />

            <ImageView
                android:id="@+id/image_me"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/default_image"
                android:scaleType="fitXY"/>
        </LinearLayout>
    </RelativeLayout>





</ScrollView>